@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: May 8, 2007</p>
+      <p>Last Updated: May 12, 2007</p>
     </td>
   </tr>
 </table>
@@ -502,12 +502,15 @@ Other memory:
 
 0.2.5 2007-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
-	* Added support for the NXP 214x processor on the mcu123.com lpc214x
-	  development board.
-	* Added support for block devices.
 	* Corrected some build/configuration issues introduced with the
 	  last release.
+	* Added support for the NXP 214x processor on the mcu123.com lpc214x
+	  development board (untested)
+	* Added support for block devices.
+	* Simulated target now exports a VFAT filesystem
+	* Added mount() and umount()
 	* Started m68322
+	* Added support for the NXP 214x processor on the mcu123.com lpc214x
 </pre></ul>
 
 <table width ="100%">
